traefik/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`74.179.216.236.nip.io`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
    services:
    - name: api@internal
      kind: TraefikService
