traefik/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: myingressname
  namespace: apps
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`74.179.216.236.nip.io`)
      services:
        - name: my-service-name
          port: 3000
  # tls:
    # certResolver: letsencrypt
